--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ project(wall_features)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED
-	pcl_ros
-	pcl_conversions
 	roscpp
+  pcl_ros
+  pcl_conversions
 	pointcloud_primitive_search
 )
 
@@ -104,8 +104,8 @@ find_package(catkin REQUIRED
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES wall_features
+  INCLUDE_DIRS include
+  LIBRARIES wall_damage_estimation
 #  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
 )
