--- a/param/wall_search.yaml
+++ b/param/wall_search.yaml
@@ -11,7 +11,7 @@ wall_features:
   lower_dist_bin_limit:   0.2
   upper_dist_bin_limit:   0.1
   # ----- input options ----- 
-  input_from_bag:    false
+  input_from_bag:    true
   # custom cloud generation options
   min_x:    0.0
   max_x:    1.0
@@ -23,7 +23,7 @@ wall_features:
   y_range:  0.01
   z_range:  0.01
   # bag input options
-  bag_name:     "stitched_pointcloud_1.bag"
+  bag_name:     /home/conor/catkin-ws/data/Tunnel_Scans/Nov_06_2017/slow_arm_fore.bag
 
 primitive_search:
   primitive_search:
@@ -32,7 +32,7 @@ primitive_search:
     task_list:            [ wall ]
     plane_options:
       max_iterations:   50
-      dist_threshold:   0.1       
+      dist_threshold:   0.05     
     cylinder_options:
       max_iterations:   50
       dist_threshold:   0.005
@@ -41,7 +41,7 @@ primitive_search:
       wall:
         type:                   5     # Planar Segmentation
         max_iterations:         500
-        dist_threshold:         0.1     
+        dist_threshold:         0.02     
         should_publish:         true
         publish_topic:          wall
         should_publish_r:       true
@@ -52,6 +52,6 @@ primitive_search:
         offset_threshold:       0.06                # meteres
         check_orientation:      false
         check_distance:         false
-        expected_coefficients:  [0.0, 1.0, 0.0, 1.0] #[0.0, 1.0, 0.0, 1.37]
+        expected_coefficients:  [-0.01, 0.01, 1.0, 0.0] #[0.0, 1.0, 0.0, 1.37]
           # +/- thickness, +/- horizontal, +/- other 
-        clip_boundaries:        [-1, 1, -2.0, 2.0, -3, 3] #[-0.2, 0.2, -10.0, 10.0, -0.3, 5.0] 
+        clip_boundaries:        [-0.3, 0.3, -3, 3, -3, 3] #[-0.4, 0.4, -2, 1.3, 0.5, 2] #[-0.2, 0.2, -10.0, 10.0, -0.3, 5.0] 
