--- a/param/plane_finder.yaml
+++ b/param/plane_finder.yaml
@@ -9,19 +9,19 @@ pointcloud_process:
             should_publish:   true
             publish_topic:    transformed_cloud
           clip: 
-            type:             2     # Clipping (Cond)
+            type:             2     # Clipping 
             box:              [ -5, 5, -3, 3, -1, 3.7, 0,0,0,0,0,0 ]
             keep_ordered:     false
             should_publish:   true
             publish_topic:    clipped_cloud
           voxelize:           
-            type:             4     # Voxelization
+            type:             3     # Voxelization
             leaf_sizes:       [ 0.05, 0.05, 0.05 ]
             keep_ordered:     false
             should_publish:   true
             publish_topic:    voxelized_cloud
           plane_seg:
-            type:             5     # Planar Segmentation
+            type:             4     # Planar Segmentation
             max_iterations:   250
             dist_threshold:   0.007
             should_publish:   true
@@ -30,7 +30,7 @@ pointcloud_process:
             publish_topic_r:  planeless_cloud
             remove_cloud:     true
           radius_filter:
-            type:             8
+            type:             7
             search_radius:    0.02
             min_neighbors:    10
             keep_ordered:     false
