--- a/param/plane_rasterizer.yaml
+++ b/param/plane_rasterizer.yaml
@@ -2,37 +2,37 @@
 pointcloud_process:
   plane_finder:
     task_list:            [ radius_filter, plane_seg ]
-        tasks:
-          transform:
-            type:             1     # Transformation
-            map_name:         map
-            should_publish:   true
-            publish_topic:    transformed_cloud
-          clip: 
-            type:             2     # Clipping (Cond)
-            box:              [ -5, 5, -3, 3, -1, 3.7, 0,0,0,0,0,0 ]
-            keep_ordered:     false
-            should_publish:   true
-            publish_topic:    clipped_cloud
-          voxelize:           
-            type:             4     # Voxelization
-            leaf_sizes:       [ 0.05, 0.05, 0.05 ]
-            keep_ordered:     false
-            should_publish:   true
-            publish_topic:    voxelized_cloud
-          plane_seg:
-            type:             5     # Planar Segmentation
-            max_iterations:   250
-            dist_threshold:   0.007
-            should_publish:   true
-            publish_topic:    plane_cloud
-            should_publish_r: true
-            publish_topic_r:  planeless_cloud
-            remove_cloud:     true
-          radius_filter:
-            type:             8
-            search_radius:    0.02
-            min_neighbors:    10
-            keep_ordered:     false
-            should_publish:   true
-            publish_topic:    radius_filtered_cloud
+    tasks:
+      transform:
+        type:             1     # Transformation
+        map_name:         map
+        should_publish:   true
+        publish_topic:    transformed_cloud
+      clip: 
+        type:             2     # Clipping 
+        box:              [ -5, 5, -3, 3, -1, 3.7, 0,0,0,0,0,0 ]
+        keep_ordered:     false
+        should_publish:   true
+        publish_topic:    clipped_cloud
+      voxelize:           
+        type:             3     # Voxelization
+        leaf_sizes:       [ 0.05, 0.05, 0.05 ]
+        keep_ordered:     false
+        should_publish:   true
+        publish_topic:    voxelized_cloud
+      plane_seg:
+        type:             4     # Planar Segmentation
+        max_iterations:   250
+        dist_threshold:   0.007
+        should_publish:   true
+        publish_topic:    plane_cloud
+        should_publish_r: true
+        publish_topic_r:  planeless_cloud
+        remove_cloud:     true
+      radius_filter:
+        type:             7
+        search_radius:    0.02
+        min_neighbors:    10
+        keep_ordered:     false
+        should_publish:   true
+        publish_topic:    radius_filtered_cloud
