--- a/param/rasterizer.yaml
+++ b/param/rasterizer.yaml
@@ -1,7 +1,7 @@
 
 rasterizer:
-  pixel_width:            0.02
-  pixel_heigth:           0.02
+  pixel_width:            0.04
+  pixel_height:           0.04
   outlier_filter_scale:   0.08
   outlier_neighbors:      1
   max_iterations:         10000
