--- a/param/plane_rasterizer.yaml
+++ b/param/plane_rasterizer.yaml
@@ -4,24 +4,24 @@ pointcloud_process:
     task_list:            [ radius_filter, plane_seg ]
     tasks:
       transform:
-        type:             1     # Transformation
+        type:             transform
         map_name:         map
         should_publish:   true
         publish_topic:    transformed_cloud
       clip: 
-        type:             2     # Clipping 
+        type:             clipping 
         box:              [ -5, 5, -3, 3, -1, 3.7, 0,0,0,0,0,0 ]
         keep_ordered:     false
         should_publish:   true
         publish_topic:    clipped_cloud
       voxelize:           
-        type:             3     # Voxelization
+        type:             voxelizing
         leaf_sizes:       [ 0.05, 0.05, 0.05 ]
         keep_ordered:     false
         should_publish:   true
         publish_topic:    voxelized_cloud
       plane_seg:
-        type:             4     # Planar Segmentation
+        type:             plane_seg
         max_iterations:   250
         dist_threshold:   0.007
         should_publish:   true
@@ -30,7 +30,7 @@ pointcloud_process:
         publish_topic_r:  planeless_cloud
         remove_cloud:     true
       radius_filter:
-        type:             7
+        type:             radius_filter
         search_radius:    0.02
         min_neighbors:    10
         keep_ordered:     false
