--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="conor@todo.todo">conor</maintainer>
+  <maintainer email="conormcmahon22@gmail.com">conor</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -44,11 +44,16 @@
   <build_depend>message_generation</build_depend>
   <run_depend>libpcl-all</run_depend>
   <run_depend>message_runtime</run_depend>
-
-  <build_depend>pointcloud_primitive_search</build_depend>
-  <run_depend>pointcloud_primitive_search</run_depend>
   <build_depend>cv_bridge</build_depend>
   <run_depend>cv_bridge</run_depend>
+  <build_depend>pointcloud_processing_server</build_depend>
+  <run_depend>pointcloud_processing_server</run_depend>
+  <build_depend>pointcloud_primitive_search</build_depend>
+  <run_depend>pointcloud_primitive_search</run_depend>
+  <build_depend>pointcloud_registration_server</build_depend>
+  <run_depend>pointcloud_registration_server</run_depend>
+  <build_depend>roscpp</build_depend>
+  <run_depend>roscpp</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
