--- a/param/wall_search.yaml
+++ b/param/wall_search.yaml
@@ -1,9 +1,11 @@
 
 wall_features:
-  leaf_size:  0.02
+  segmentation_leaf_size:   0.01
+  input_cloud_leaf_size:    0.001
+  output_cloud_leaf_size:   0.001
   debug: true
   k_search_pointwise:   30
-  k_search_histogram:   70
+  k_search_histogram:   30
   # bin options
   automatically_set_bins:   true
   lower_angle_bin_limit:  0.0
@@ -23,7 +25,8 @@ wall_features:
   y_range:  0.01
   z_range:  0.01
   # bag input options
-  bag_name:     /home/conor/catkin-ws/data/Tunnel_Scans/Nov_06_2017/slow_arm_fore.bag
+  bag_name:     /home/conor/ros_data/Fake_Walls/Faro/segmented_screwy.bag   #Segmented/screwy/10dps.bag
+  bag_topic:    /target_wall
 
 primitive_search:
   primitive_search:
@@ -31,17 +34,17 @@ primitive_search:
     # NOTE - task names in task_list below MUST match the subheadings under the tasks heading
     task_list:            [ wall ]
     plane_options:
-      max_iterations:   50
+      max_iterations:   300
       dist_threshold:   0.05     
     cylinder_options:
-      max_iterations:   50
+      max_iterations:   300
       dist_threshold:   0.005
     map_offset:     [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     tasks:
       wall:
         type:                   plane_seg
         max_iterations:         500
-        dist_threshold:         0.02     
+        dist_threshold:         0.03     
         should_publish:         true
         publish_topic:          wall
         should_publish_r:       true
@@ -52,6 +55,6 @@ primitive_search:
         offset_threshold:       0.06                # meteres
         check_orientation:      false
         check_distance:         false
-        expected_coefficients:  [-0.01, 0.01, 1.0, 0.0] #[0.0, 1.0, 0.0, 1.37]
+        expected_coefficients:  [1.00, 0.01, 0.0, 0.0]  #[1.0, 0.01, 0.0, 1.2]
           # +/- thickness, +/- horizontal, +/- other 
         clip_boundaries:        [-0.3, 0.3, -3, 3, -3, 3] #[-0.4, 0.4, -2, 1.3, 0.5, 2] #[-0.2, 0.2, -10.0, 10.0, -0.3, 5.0] 
