--- a/param/wall_search.yaml
+++ b/param/wall_search.yaml
@@ -29,8 +29,8 @@ wall_features:
   y_range:  0.01
   z_range:  0.01
   # bag input options
-  bag_name:     /home/conor/ros_data/Fake_Walls/Faro/segmented_screwy.bag   #Segmented/screwy/10dps.bag
-  bag_topic:    /target_wall
+  bag_name:     /home/conor/ros_data/Fake_Walls/faro_scan_clipped_screwy.bag   #Segmented/screwy/10dps.bag
+  bag_topic:    /laser_stitcher/full_scan
 
 primitive_search:
   primitive_search:
@@ -59,6 +59,6 @@ primitive_search:
         offset_threshold:       0.06                # meteres
         check_orientation:      false
         check_distance:         false
-        expected_coefficients:  [1.00, 0.01, 0.0, 0.0]  #[1.0, 0.01, 0.0, 1.2]
+        expected_coefficients:  [1.00, -0.3, -0.15, 0.0]  #[1.0, 0.01, 0.0, 1.2]
           # +/- thickness, +/- horizontal, +/- other 
         clip_boundaries:        [-0.3, 0.3, -3, 3, -3, 3] #[-0.4, 0.4, -2, 1.3, 0.5, 2] #[-0.2, 0.2, -10.0, 10.0, -0.3, 5.0] 
